--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -7,11 +7,10 @@
 <body>
     <nav>
         <ul>
+            <li><img src="../../img/logo.png"></li>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../Doctor/docindex.html">Doctors</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="../Account/Login.html"btn btn-login">Login</a></li>
-            <li><a href="../Account/Register.html" class="btn btn-register">Register</a></li>
         </ul>
     </nav>
     <h2>Log in now!</h2>
