--- a/Views/Appointment/Myappointments.html
+++ b/Views/Appointment/Myappointments.html
@@ -41,9 +41,9 @@
                 <td>8:30 AM</td>
                 <td>Bleeding gums</td>
                 <td class="actions">
-                    <button class="edit-button" onclick="window.location.href='/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Appointment/Editappointment.html'">Edit</button>
-                    <button class="details-button" onclick="window.location.href='/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -56,7 +56,7 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -69,7 +69,7 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -82,7 +82,7 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -95,7 +95,7 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -108,7 +108,7 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -121,7 +121,7 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -134,7 +134,7 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -147,7 +147,7 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -160,7 +160,7 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -173,7 +173,7 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
             <tr>
@@ -186,65 +186,26 @@
                 <td class="actions">
                     <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
                     <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
-                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
-            
         </tbody>
     </table>
-    
+
     <p>&copy; 2024 - HealHive LLC</p>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            // Event delegation to handle click for all delete buttons
             const tableBody = document.querySelector('table tbody');
             tableBody.addEventListener('click', function(event) {
-                if (event.target.matches('.delete-button')) {
-                    // Confirm deletion with the user
-                    if (confirm('Are you sure you want to delete this appointment?')) {
-                        // Get the parent row (tr) of the clicked delete button
-                        const rowToDelete = event.target.closest('tr');
-        
-                        // Get the index of the row within the tbody
-                        const rowIndex = Array.from(tableBody.querySelectorAll('tr')).indexOf(rowToDelete);
-        
-                        // Now, rowIndex is the unique identifier (0-based index) for the row to delete
-                        // Perform your deletion logic here. For instance:
-                        // sendDeleteRequestToServer(rowIndex); // You would define this function
-                        
-                        // For immediate front-end deletion:
-                        rowToDelete.remove();
+                if (event.target.className === 'delete-button') {
+                    const confirmation = confirm('Are you sure you want to delete this appointment?');
+                    if (confirmation) {
+                        const row = event.target.closest('tr');
+                        row.parentNode.removeChild(row);
                     }
                 }
             });
         });
-        
-        // Example server deletion request function (you need to implement the server-side)
-        function sendDeleteRequestToServer(rowIndex) {
-            console.log('Sending delete request to the server for row:', rowIndex);
-            // You would typically use `fetch` or `XMLHttpRequest` to send the deletion request to your server.
-        }
-        </script>
-        
-    <br><br><br>
-            
+    </script>
 </body>
-<footer>
-    <div class="footer-container">
-            <div class="footer-section">
-                <h4>Contact Us</h4>
-                <p>Email: support@docappointments.com</p>
-                <p>Phone: +1 234 567 8900</p>
-                <p>Address: 123 Health St, Wellness City</p>
-            </div>
-            <div class="footer-section">
-                <h4>Follow Us</h4>
-                <div class="social-links">
-                   <p><a href="https://facebook.com">Facebook</a></pr>
-                   <p><a href="https://twitter.com">Twitter</a></p>
-                    <p><a href="https://instagram.com">Instagram</a></p>
-                </div>
-            </div>
-    </div>
-</footer>
 </html>
