--- a/Views/Doctor/docindex.html
+++ b/Views/Doctor/docindex.html
@@ -10,11 +10,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="../../index.html">Hospital</a></li>
+                <li><img src="../../img/logo.png"></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li><a href="../../Views/Doctor/docindex.html">Doctors</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="../../Views/Account/Register.html">Register</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
                 <li><a href="../../Views/Account/Login.html">Log in</a></li>
+                <li><a href="../../Views/Account/Register.html">Register</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -53,7 +56,7 @@
                     <td>Emergency</td>
                     <td>MBBS,FRCEM</td>
                     <td>Yes</td>
-                    <td><a href="../../Views/Appointment/createappointment.html">Create Appointment</a></td>
+                    <td><a href="../../Views/Appointment/AppointmentIndex.html">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Danny</td>
@@ -61,7 +64,7 @@
                     <td>Denistry</td>
                     <td>DDS</td>
                     <td>Yes</td>
-                    <td><a href="/create-appointment">Create Appointment</a></td>
+                    <td><a href="../../Views/Appointment/AppointmentIndex.html">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Joey</td>
@@ -69,7 +72,7 @@
                     <td>Neurology</td>
                     <td>MBBS,MD</td>
                     <td>Yes</td>
-                    <td><a href="/create-appointment">Create Appointment</a></td>
+                    <td><a href="../../Views/Appointment/AppointmentIndex.html">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Kenneth</td>
@@ -77,7 +80,7 @@
                     <td>Radiology</td>
                     <td>MBBS,DO</td>
                     <td>Yes</td>
-                    <td><a href="/create-appointment">Create Appointment</a></td>
+                    <td><a href="../../Views/Appointment/AppointmentIndex.html">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Maria</td>
@@ -85,7 +88,7 @@
                     <td>Gynecology</td>
                     <td>MBBS,MD</td>
                     <td>Yes</td>
-                    <td><a href="/create-appointment">Create Appointment</a></td>
+                    <td><a href="../../Views/Appointment/AppointmentIndex.html">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Shelly</td>
@@ -93,7 +96,7 @@
                     <td>Dietician</td>
                     <td>MBBS,RDN</td>
                     <td>Yes</td>
-                    <td><a href="/create-appointment">Create Appointment</a></td>
+                    <td><a href="../../Views/Appointment/AppointmentIndex.html">Create Appointment</a></td>
                 </tr>
             </tbody>
         </table>
