--- a/Views/Appointment/AppointmentIndex.html
+++ b/Views/Appointment/AppointmentIndex.html
@@ -9,12 +9,12 @@
 <body>
     <nav>
         <ul>
+            <li><img src="../../img/logo.png"></li>
             <li><a href="../../index.html">Hospital</a></li>
             <li><a href="../../Views/Doctor/index.html">Doctors</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li><a href="../../Views/Account/Login.html" class="btn btn-login">Login</a></li>
-            <li><a href="../../Views/Account/Register.html" class="btn btn-register">Register</a></li>
+            <li><a href="../Appointment/Myappointments.html" class="btn btn-login">MyAppointments</a></li>
         </ul>
     </nav>
 
