--- a/css/bookappointment.css
+++ b/css/bookappointment.css
@@ -2,12 +2,17 @@
 nav ul {
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     background-color: #56bb8a;
     padding: 10px;
   }
   nav li {
     margin-right: 20px;
+  }
+  nav li img{
+    padding-left: 20px;
+    height: 40px;
+    width: 60px;
   }
   nav a {
     text-decoration: none;
