--- a/css/login.css
+++ b/css/login.css
@@ -5,12 +5,18 @@ body {
 nav ul {
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     background-color: #56bb8a;
     padding: 10px;
+    gap: 15px;
   }
   nav li {
     margin-right: 20px;
+  }
+  nav li img {
+    padding-left: 20px;
+    height: 40px;
+    width: 40px;
   }
   nav a {
     text-decoration: none;
