--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,12 @@ nav ul {
   justify-content: start;
   background-color: #56bb8a;
   padding: 10px;
+  gap: 20px;
 }
 nav li {
   margin-right: 20px;
   font-size: 20px;
+  font-family: 'Times New Roman', Times, serif;
 }
 nav li img{
   padding-left: 20px;
@@ -22,7 +24,7 @@ nav a {
   transition: color 0.3s;
 }
 nav a:hover {
-  color: #56bb8a;
+  color: #b9c0bc;
 }
 
 /* Styling for the jumbotron section */
