--- a/css/register.css
+++ b/css/register.css
@@ -6,12 +6,18 @@ body {
 nav ul {
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     background-color: #56bb8a;
     padding: 10px;
+    gap: 15px;
   }
   nav li {
-    margin-right: 20px;
+    margin-right: 15px;
+  }
+  nav li img{
+    padding-left: 20px;
+    height: 40px;
+    width: 40px;
   }
   nav a {
     text-decoration: none;
