--- a/css/statistics.css
+++ b/css/statistics.css
@@ -1,19 +1,15 @@
-/* Reset and typography */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-/* Basic styling for the navigation menu */
 nav ul {
     list-style: none;
     display: flex;
     justify-content: start;
     background-color: #56bb8a;
     padding: 10px;
+    gap: 20px;
   }
   nav li {
     margin-right: 20px;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
   }
   nav li img{
     padding-left: 20px;
@@ -27,39 +23,48 @@ nav ul {
     transition: color 0.3s;
   }
   nav a:hover {
-    color: #56bb8a;
+    color: #b9c0bc;
   }
-
-
-/* Main content */
+ 
+/* Basic styling for the containers */
 main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     padding: 20px;
+    background-color: #f4f4f4;
 }
 
-.filters {
-    margin-bottom: 20px;
+.chart-section {
+    flex: 1 1 calc(50% - 40px); /* Adjust the calc() to fit two sections side by side */
+    margin: 20px; /* This margin is taken into account in the calc() above */
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
 }
 
-.filters input,
-.filters select,
-.filters button {
-    padding: 5px;
+/* Add responsive design for smaller screens */
+@media (max-width: 768px) {
+    .chart-section {
+        flex-basis: 100%;
+    }
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
+
+.chart-section h2 {
+    color: #333; /* Dark grey color for headings */
+    margin-bottom: 15px; /* Space below the heading */
 }
 
-th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
+.insights {
+    font-size: 14px; /* Smaller font size for insight text */
+    color: #666; /* Light grey color for the text */
+    margin-top: 15px; /* Space above the insights text */
+    text-align: left; /* Left-align the insights text */
 }
 
-th {
-    background-color: #f2f2f2;
-}
+
 
 
 /* Basic Styling for Footer */
@@ -67,7 +72,7 @@ footer {
     background-color: #56bb8a;
     color: #333;
     padding: 20px 0;
-    font-size: 14px;
+    font-size: 15px;
   }
   
   .footer-container {
@@ -101,4 +106,5 @@ footer {
   .footer-section a:hover {
     color: #007bff;
   }
+  
   
