--- a/Views/Appointment/Editappointment.html
+++ b/Views/Appointment/Editappointment.html
@@ -2,25 +2,63 @@
 <html>
 <head>
     <title>Edit Appointment</title>
-    <link rel="stylesheet" type="text/css" href="../../css/appointmentindex.css">
+    <link rel="stylesheet" href="../../css/edit.css">
 </head>
+<style>
+    body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+}
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    background-color: #56bb8a;
+    padding: 10px;
+  }
+  nav li {
+    margin-right: 20px;
+  }
+  nav a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    transition: color 0.3s;
+  }
+  nav a:hover {
+    color: #56bb8a;
+  }
+  
+</style>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Views/Doctor/docindex.html">Doctors</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="Views/Account/Login.html" class="btn btn-login">Login</a></li>
-                <li><a href="Views/Account/Register.html" class="btn btn-register">Register</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../Views/Doctor/DocIndex.html">Doctors</a></li>
+                <li><a href="../../Views/Appointment/Details.html">My Appointments</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="../../index.html">Log out</a></li>
             </ul>
         </nav>
-        <br><br>
     </header>
 <div class="row">
     <div class="col-md-12">
         <h1>Edit your appointment</h1>
         <form>
+            <label for="patient name">Patient Name</label>
+            <input type="text" placeholder="Patient Name*" required>
+            <label for="email">Email ID</label>
+            <input type="email" placeholder="Email Address*" required>
+            <label for="department">Department</label>
+            <select id="DeptID" name="DepartmentName">
+                <option>Select Department</option>
+                <option>Cardiology</option>
+                <option>Dermatology</option>
+                <option>Neurology</option>
+                <!-- More department options -->
+            </select>
             <label for="doctor">Doctor</label>
             <select id="DoctorID" name="DoctorID">
                 <option value="">--Select Doctor--</option>
@@ -31,10 +69,10 @@
                 <option value="5">Dr.Maria</option>
                 <option value="6">Dr.Shelly</option>
             </select>
-
+ 
             <label for="date">Date</label>
             <input type="date" id="date" name="date">
-
+ 
             <label for="time">Time</label>
             <select id="Time" name="Time" class="form-control">
                 <option value="8am">8:00 AM to 8:30 AM</option>
@@ -43,28 +81,7 @@
                 <option value="11am">11:00 AM to 11:30 AM</option>
                 <option value="12pm">12:00 PM to 12:30 PM</option>
             </select>
-
+ 
             <button type="submit">Save</button>
         </form>
     </div>
-</div>
-<br><br><br><br><br>
-</body>
-<footer>
-    <div class="footer-container">
-            <div class="footer-section">
-                <h4>Contact Us</h4>
-                <p>Email: support@docappointments.com</p>
-                <p>Phone: +1 234 567 8900</p>
-                <p>Address: 123 Health St, Wellness City</p>
-            </div>
-            <div class="footer-section">
-                <h4>Follow Us</h4>
-                <div class="social-links">
-                   <p><a href="https://facebook.com">Facebook</a></pr>
-                   <p><a href="https://twitter.com">Twitter</a></p>
-                    <p><a href="https://instagram.com">Instagram</a></p>
-                </div>
-            </div>
-    </div>
-</footer>
