--- a/Views/Appointment/AppointmentIndex.html
+++ b/Views/Appointment/AppointmentIndex.html
@@ -12,8 +12,8 @@
             <li><img src="../../img/logo.png"></li>
             <li><a href="../../index.html">Hospital</a></li>
             <li><a href="../../Views/Doctor/index.html">Doctors</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="/about">About Us</a></li>
+            <li><a href="/contact">Contact Us</a></li>
             <li><a href="../Appointment/Myappointments.html" class="btn btn-login">MyAppointments</a></li>
         </ul>
     </nav>
