--- a/Views/Appointment/Details.html
+++ b/Views/Appointment/Details.html
@@ -10,9 +10,9 @@
             <ul>
                 <li><a href="../../index.html">Home</a></li>
                 <li><a href="../../Views/Doctor/docindex.html">Doctors</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="../Account/Login.html" class="btn btn-login">Login</a></li>
-                <li><a href="../Account/Register.html" class="btn btn-register">Register</a></li>
+                <li><a href="/about">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="../../index.html">Log out</a></li>
             </ul>
         </nav>
         <br><br>
@@ -32,7 +32,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>Alex</td>
+                <td>Ben</td>
                 <td>Dr.Danny</td>
                 <td>Dentistry</td>
                 <td>2024-04-25</td>
@@ -40,12 +40,76 @@
                 <td>Bleeding gums</td>
             </tr>
             <tr>
-                <td>Alex</td>
+                <td>Toy</td>
                 <td>Dr.Joey</td>
                 <td>Nuerology</td>
                 <td>2024-04-15</td>
                 <td>10:30 AM</td>
                 <td>Migrane</td>
+            </tr>
+            <tr>
+                <td>Alex</td>
+                <td>Dr.Asfi</td>
+                <td>Emergency</td>
+                <td>2024-05-15</td>
+                <td>02:00 PM</td>
+                <td>Chest Pain</td>
+            </tr>
+            <tr>
+                <td>Emma</td>
+                <td>Dr.Danny</td>
+                <td>Dentistry</td>
+                <td>2024-05-20</td>
+                <td>11:00 AM</td>
+                <td>Dental Checkup</td>
+            </tr>
+            <tr>
+                <td>Olivia</td>
+                <td>Dr.Kenneth</td>
+                <td>Radiology</td>
+                <td>2024-06-18</td>
+                <td>09:30 AM</td>
+                <td>X-Ray</td>
+            </tr>
+            <tr>
+                <td>Noah</td>
+                <td>Dr.Maria</td>
+                <td>Gynecology</td>
+                <td>2024-07-05</td>
+                <td>01:00 PM</td>
+                <td>Regular Checkup</td>
+            </tr>
+            <tr>
+                <td>Sophia</td>
+                <td>Dr.Shelly</td>
+                <td>Dietician</td>
+                <td>2024-07-22</td>
+                <td>03:00 PM</td>
+                <td>Nutrition Plan</td>
+            </tr>
+            <tr>
+                <td>Isabella</td>
+                <td>Dr.Danny</td>
+                <td>Dentistry</td>
+                <td>2024-08-20</td>
+                <td>10:00 AM</td>
+                <td>Wisdom Teeth Removal</td>
+            </tr>
+            <tr>
+                <td>James</td>
+                <td>Dr.Joey</td>
+                <td>Neurology</td>
+                <td>2024-09-15</td>
+                <td>11:30 AM</td>
+                <td>EEG Test</td>
+            </tr>
+            <tr>
+                <td>Charlotte</td>
+                <td>Dr.Kenneth</td>
+                <td>Radiology</td>
+                <td>2024-10-05</td>
+                <td>08:45 AM</td>
+                <td>CT Scan</td>
             </tr>
         </tbody>
     </table>
