--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -3,6 +3,39 @@
 <head>
     <title>Log in</title>
     <link rel="stylesheet" href="../../css/login.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-image: url('../../img/DoctorAppointment.jpg'); /* Add your background image URL here */
+            background-size: cover;
+            background-position: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8); /* Background color with transparency */
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); /* Box shadow for container */
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        h2 {
+            color: #333; /* Text color */
+        }
+
+        p {
+            text-align: justify;
+            margin-bottom: 20px;
+            color: #333; /* Text color */
+        }
+    </style>
 </head>
 <body>
     <nav>
@@ -10,7 +43,7 @@
             <li><img src="../../img/logo.png"></li>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../Doctor/docindex.html">Doctors</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/about">About Us</a></li>
         </ul>
     </nav>
     <h2>Log in now!</h2>
