--- a/Views/Doctor/docindex.html
+++ b/Views/Doctor/docindex.html
@@ -128,7 +128,7 @@
             filterSelect.addEventListener('change', filterTable);
         });
     </script>
-
+ <!--script-->
 </body>
 
 <footer>
