--- a/Views/Account/Register.html
+++ b/Views/Account/Register.html
@@ -10,7 +10,7 @@
             <li><img src="../../img/logo.png"></li>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../Doctor/docindex.html">Doctors</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/about">About Us</a></li>
            
         </ul>
     </nav>
