--- a/Views/Account/Register.html
+++ b/Views/Account/Register.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Register</title>
+    <link rel="icon" type="image/x-icon" href="../../img/logo.png">
     <link rel="stylesheet" href="../../css/register.css">
 </head>
 <body>
@@ -14,6 +15,9 @@
            
         </ul>
     </nav>
+    <main>
+        <br>
+        <br>
     <h2>Register Now!</h2>
     <form id="registerForm" method="post" class="form-horizontal" role="form">
         <input type="hidden" name="__RequestVerificationToken" value="...">
@@ -72,6 +76,7 @@
             </div>
         </div>
     </form>
+    
     <script src="../../js/register.js"></script>
     <br><br><br><br><br>
 </body>
@@ -93,4 +98,5 @@
             </div>
     </div>
 </footer>
+</main>
 </html>
