--- a/Views/Appointment/Details.html
+++ b/Views/Appointment/Details.html
@@ -2,16 +2,17 @@
 <html>
 <head>
     <title>Appointment Details</title>
+    <link rel="icon" type="image/x-icon" href="../../img/logo.png">
     <link rel="stylesheet" type="text/css" href="../../css/appointmentindex.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
+                <li><img src="../../img/logo.png"></li>
                 <li><a href="../../index.html">Home</a></li>
                 <li><a href="../../Views/Doctor/docindex.html">Doctors</a></li>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="../Home/About.html">About Us</a></li>
                 <li><a href="../../index.html">Log out</a></li>
             </ul>
         </nav>
@@ -115,9 +116,8 @@
     </table>
     
     <p>
-        <a href="../../Views/Appointment/createappointment.html" class="btn">Go Back</a>
+        <a href="../../Views/Appointment/Myappointments.html" class="btn">Go Back</a>
     </p>
-    <p>&copy; 2024 - Hospital LLC</p>
     <br><br><br><br><br><br>
 </body>
 <footer>
