--- a/Views/Appointment/Editappointment.html
+++ b/Views/Appointment/Editappointment.html
@@ -2,43 +2,19 @@
 <html>
 <head>
     <title>Edit Appointment</title>
+    <link rel="icon" type="image/x-icon" href="../../img/logo.png">
     <link rel="stylesheet" href="../../css/edit.css">
 </head>
-<style>
-    body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-}
-nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    background-color: #56bb8a;
-    padding: 10px;
-  }
-  nav li {
-    margin-right: 20px;
-  }
-  nav a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    transition: color 0.3s;
-  }
-  nav a:hover {
-    color: #56bb8a;
-  }
-  
-</style>
+
 <body>
     <header>
         <nav>
             <ul>
+                <li><img src="../../img/logo.png"></li>
                 <li><a href="../../index.html">Home</a></li>
                 <li><a href="../../Views/Doctor/DocIndex.html">Doctors</a></li>
                 <li><a href="../../Views/Appointment/Details.html">My Appointments</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="../../Views/Home/About.html">About Us</a></li>
                 <li><a href="../../index.html">Log out</a></li>
             </ul>
         </nav>
