--- a/Views/Appointment/Myappointments.html
+++ b/Views/Appointment/Myappointments.html
@@ -2,15 +2,17 @@
 <html>
 <head>
     <title>Appointment Details</title>
+    <link rel="icon" type="image/x-icon" href="../../img/logo.png">
     <link rel="stylesheet" type="text/css" href="../../css/appointmentindex.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><img src="../../img/logo.png"></li>
+                <li><a href="../../Views/Account/Myaccount.html">Home</a></li>
                 <li><a href="../../Views/Doctor/DocIndex.html">Doctors</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="../../Views/Home/About.html">About Us</a></li>
                 <li><a href="../../index.html">Log out</a></li>
             </ul>
         </nav>
