--- a/Views/Doctor/docindex.html
+++ b/Views/Doctor/docindex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctors</title>
+    <link rel="icon" type="image/x-icon" href="../../img/logo.png">
     <link rel="stylesheet" href="../../css/doctorindex.css">
 </head>
 <body>
@@ -13,8 +14,7 @@
                 <li><img src="../../img/logo.png"></li>
                 <li><a href="../../index.html">Home</a></li>
                 <li><a href="../../Views/Doctor/docindex.html">Doctors</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="../../Views/Home/About.html">About Us</a></li>
                 <li><a href="../../Views/Account/Login.html">Log in</a></li>
                 <li><a href="../../Views/Account/Register.html">Register</a></li>
                 
@@ -61,7 +61,7 @@
                 <tr>
                     <td>Dr.Danny</td>
                     <td>Female</td>
-                    <td>Denistry</td>
+                    <td>Dentistry</td>
                     <td>DDS</td>
                     <td>Yes</td>
                     <td><a href="../../Views/Appointment/AppointmentIndex.html">Create Appointment</a></td>
