--- a/Views/Appointment/AppointmentIndex.html
+++ b/Views/Appointment/AppointmentIndex.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appointment Form</title>
+    <link rel="icon" type="image/x-icon" href="../../img/logo.png">
     <link rel="stylesheet" href="../../css/bookappointment.css">
 </head>
 <body>
     <nav>
         <ul>
             <li><img src="../../img/logo.png"></li>
-            <li><a href="../../index.html">Hospital</a></li>
+            <li><a href="../../index.html">Home</a></li>
             <li><a href="../../Views/Doctor/index.html">Doctors</a></li>
-            <li><a href="/about">About Us</a></li>
-            <li><a href="/contact">Contact Us</a></li>
+            <li><a href="../../Views/Home/About.html">About Us</a></li>
             <li><a href="../Appointment/Myappointments.html" class="btn btn-login">MyAppointments</a></li>
         </ul>
     </nav>
