--- a/css/edit.css
+++ b/css/edit.css
@@ -21,15 +21,23 @@ body {
 
 /* Basic styling for the navigation menu */
 nav ul {
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  background-color: #56bb8a;
-  padding: 10px;
-}
-nav li {
-  margin-right: 20px;
-}
+    list-style: none;
+    display: flex;
+    justify-content: start;
+    background-color: #56bb8a;
+    padding: 10px;
+    gap: 20px;
+  }
+  nav li {
+    margin-right: 20px;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  nav li img{
+    padding-left: 20px;
+    height: 35px;
+    width: 55px;
+  }
 nav a {
   text-decoration: none;
   color: #fff;
@@ -56,7 +64,7 @@ nav a:hover {
 
 /* Main content styles */
 .row {
-    width: 80%;
+    width: 800px;
     margin: 0 auto;
 }
 
