--- a/css/about.css
+++ b/css/about.css
@@ -5,9 +5,12 @@ nav ul {
     justify-content: start;
     background-color: #56bb8a;
     padding: 10px;
+    gap: 20px;
   }
   nav li {
     margin-right: 20px;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
   }
   nav li img{
     padding-left: 20px;
