--- a/Views/Home/About.html
+++ b/Views/Home/About.html
@@ -69,8 +69,8 @@
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../Doctor/docindex.html">Doctors</a></li>
             <li><a href="../../Views/Appointment/AppointmentIndex.html">Book an appointment</a></li>
-            <li><a href="/login" class="btn btn-login">Login</a></li>
-            <li><a href="/register" class="btn btn-register">Register</a></li>
+            <li><a href="../Account/Login.html" class="btn btn-login">Login</a></li>
+            <li><a href="../Account/Register.html" class="btn btn-register">Register</a></li>
         </ul>
     </nav>
     <div class="container">
