Final Changes - ALL

--- a/Views/Home/About.html
+++ b/Views/Home/About.html
@@ -128,5 +128,25 @@
             <a href="https://github.com/raajithasaib/Assignment_LookAndFeel.git">Visit our GitHub Repository</a>
         </div>
     </div>
+    <br><br>
+    <div class="git">
+        <h2> Git Log    </h2> <br>
+        <p> This section presents the output of the following terminal command for each group member.</p>
+        <br> <p>git log --author="githubID" --pretty=tformat: --numstat </p>
+        <div class="gitimages">
+         <h2> Afrah </h2>
+        <img src="../../img/git_Afrah.png" width="500px" height="400px"> <br>
+        <h2> Raajitha </h2>
+        <img src="../../img/git_Raajitha.png" width="500px" height="400px"><br>
+        <h2> Shwetha</h2>
+        <img src="../../img/git_Shwetha.png" width="500px" height="380px"> <br>
+        <h2> Srija</h2>
+        <img src="../../img/git_Srija.png" width="500px" height="200px">
+        </div>
+       
+    </div>
+    
+
+
 </body>
 </html>
