--- a/Views/Account/Myaccount.html
+++ b/Views/Account/Myaccount.html
@@ -14,14 +14,14 @@
             <li><img src="../../img/logo.png"></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="Views/Doctor/docindex.html">Doctors</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="../Home/About.html">About Us</a></li>
             <li><a href="#contact-section">Contact Us</a></li>
         </ul>
     </nav>
     <div class="jumbotron">
         <h2>Welcome to HealHive</h2>
         <p class="lead">Where Care Comes First</p>
-        <a href="#contact-section" class="btn btn-primary btn-large">Learn more »</a>
+        <a href="#contact-section" class="btn btn-primary btn-large">Learn more</a>
     </div>
 
     <div class="row">
@@ -29,21 +29,21 @@
             <img src="../../img/finddoctors.png" alt="Find Doctors">
             <h2>Find Doctors</h2>
             <p>Get the best in health care with the help of our highly qualified doctors. Click the button below to get started.</p>
-            <a class="btn btn-default" href="Views/Doctor/docindex.html">Find Doctors »</a>
+            <a class="btn btn-default" href="../../Views/Doctor/docindex.html">Find Doctors </a>
         </div>
 
         <div class="col-md-4">
             <img src="../../img/appointment.jpeg" alt="Create Appointments">
             <h2>Create Appointments</h2>
             <p>Get started! Your appointment is just a few clicks away.</p>
-            <a class="btn btn-default" href="Views/Appointment/AppointmentIndex.html">Create now »</a>
+            <a class="btn btn-default" href="../../Views/Appointment/AppointmentIndex.html">Create now</a>
         </div>
 
         <div class="col-md-4">
             <img src="../../img/statistics.png" alt="View Statistics">
             <h2>View Statistics</h2>
             <p>Want to know how well we are doing? Check it out yourself.</p>
-            <a class="btn btn-default" href="Views/Statistics/ViewStatistics.html">Show Statistics »</a>
+            <a class="btn btn-default" href="../../Views/Statistics/ViewStatistics.html">Show Statistics</a>
         </div>
     </div>
     <br><br><br><br><br>
